adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed minima ipsam quibusdam quo quas rerum unde nisi dolore eligendi, aut tempore ex est natus impedit officiis nihil accusamus eius ratione?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo consequuntur doloribus veniam repudiandae minus quibusdam! Nam, molestias sunt totam commodi deserunt iusto earum nisi quas eum! Saepe qui incidunt officiis?</p>
 </body>
 </html>
